--- a/css/dracarys-style.css
+++ b/css/dracarys-style.css
@@ -12,12 +12,13 @@ body {
 }
 
 .top {
-    background-image: url(../images/img-pages/winterfell/top-Winterfell.png);
+    background-image: url(../images/img-pages/dracarys/serie-dracarys.jpg);
     height: 55vh;
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
+    background-position: center;
 }
 
 h1 {
@@ -131,10 +132,10 @@ ul {
 .bold {
  font-weight: 800;
 }
-.img-bottom {
+/* .img-bottom {
     width: 100%;
     position: absolute;
     transform: translate(0, -200px);
     z-index: -1;
     opacity: 100%;
-}
+} */
